Python Mode News
================

New in version 6.1.4
---------------------

Enhanced Windows support:
  - customizable versioned py-python[23]-commands, taking the path to
    executables


Support for large output

  new commands py-fast-process, py-fast-...
  Fixes: large output makes Emacs freeze, lp:1253907

  Python code now might be processed by an
  - interactive Python shell (DEFAULT)
  - non-interactive Python (`py-fast-process-p', if large output)

  Both processes might run in
  - session, i.e. start from possible previous state (DEFAULT)
  - dedicated, (`py-dedicated-process-p', run in separate process)

- info-lookup-symbol made working with Python
  patched python-info.el available at
  https://bitbucket.org/andreas_roehler/pydoc-info
  See also INSTALL-INFO-FILES

Calls to IPython are to customizable now via
`ipython-command-args'

New commands

- `py-backward-same-level'
  While `py-up' will go upward from beginning of block, this travels
  same level, but goes up if no element left in level.  If callled
  from inside a string or list, go to its beginning.

- py-kill-shell-unconditional
  With optional argument SHELL, otherwise kill default
  (I)Python shell.

- Python specific hide-show
  py-hide-region
  py-show-region
  py-hide-statement
  py-show-statement
  py-hide-block
  py-show-block
  py-hide-clause
  py-show-clause
  py-hide-block-or-clause
  py-show-block-or-clause
  py-hide-def
  py-show-def
  py-hide-class
  py-show-class
  py-hide-expression
  py-show-expression
  py-hide-partial-expression
  py-show-partial-expression
  py-hide-line
  py-show-line
  py-hide-top-level
  py-show-top-level

- py-info-lookup-symbol ()
  Calls `info-lookup-symbol'. Sends help if stuff is missing.

- py-toggle-split-windows-function
  If window is splitted vertically or horizontally.
  Sets customizable variable
  `py-split-windows-on-execute-function'
  Also in menu Python/Customize/Switches/Display/Which split windows

- py-symbol-at-point