@@ -10,11 +10,11 @@ Selecting a Python shell:
 
 Customize default Python shell as `py-shell-name'
 
-`py-shell-name' might be an installed executable as
-shell command `type' would display, but also a
-PATH/TO/(I)PYTHON, of a virtualenv for example
+`py-shell-name' might be an installed default executable as shell
+command `type' would display, but also a PATH/TO/EXECUTABLE
 
-You might run code by another (I)Python-version than default.
+You might run code by another installed (I)Python-version than
+default.
 
 Normally this would happen if a shebang in buffer specifies it.
 Shebang precedes default py-shell-name.
@@ -23,9 +23,21 @@ In case you will run code by default-shell, ignoring shebang, set
 `py-force-py-shell-name-p' to. This might be done also via menu
 Python/.../Switches
 
-Another way to enforce a different shell than default is using
-commands which end in version like `py-execute-statement-python3'
-See menu Python/Interpreter/Other/Ignoring Defaults
+Another way to enforce a different shell is specifiyng a path
+--interactively C-u prompts for that-- or using commands which end in
+version like `py-execute-statement-python3' See menu
+Python/Interpreter/Other/Ignoring Defaults
+
+Naming Python-shell buffers in interactive mode:
+
+M-x py-shell RET ==> "*Python*"
+M-x python RET ==> "*Python*"
+M-x ipython RET ==> "*IPython*"
+M-x python3 RET ==> "*Python3*" 
+
+When Path/To/Executable is given
+C-u python RET ==> "*PTE Python*"
+
 
 #########
 
